--- a/test.html
+++ b/test.html
@@ -5,9 +5,9 @@
   
   <body>
     <h1> git pull 실습 <h1>
+      
+    <h2> 두번째 수정 사항 입니다. </h2>
+      
   </body>
   
-  
-  
-</html>
-  
+  </html>
